syntax = "proto3";

package movie.rpc.v1;

message Event {
	int32 id = 1;

	oneof message {
		ListingResponseChangedEvent listing_reponse_changed = 2;
		MovieInfoChangedEvent movie_info_changed = 3;
	}
}

message Request {
	int32 id = 1;

	oneof message {
		GetConfigRequest get_config = 2;
		GetListingRequest get_listing = 3;
		GetMovieInfoRequest get_movie_info = 4;
	}
};

message Response {
	int32 id = 1;

	oneof message {
		GetConfigResponse get_config = 2;
		GetListingResponse get_listing = 3;
		GetMovieInfoResponse get_movie_info = 4;
	}
};

////////////////////////////////////////////////////////////////////

message GetConfigRequest {};

message GetConfigResponse {
	repeated Filter filters = 1;
	repeated string sort = 2;
};

message GetListingRequest {
	repeated Filter filters = 1;
	repeated string sort = 2;
	optional string search = 3;
};

message GetListingResponse {
	repeated MovieGroup groups = 1;
};

message GetMovieInfoRequest {
	string key = 1;
};

message GetMovieInfoResponse {
	MovieInfo info = 1;
};

message ListingResponseChangedEvent {
	repeated MovieGroup removed = 1;
	repeated MovieGroup added = 2;
	repeated MovieGroup changed = 3;
};

message MovieInfoChangedEvent {
	MovieInfo info = 1;
};

////////////////////////////////////////////////////////////////////

message RangeFilter {
	string field = 1;
	int32 low = 2;
	int32 high = 3;
	bool include_missing = 4;
};

message TokensFilter {
	string field = 1;
	repeated string token = 2;
	bool include_missing = 4;
};

message Filter {
	oneof kind {
		RangeFilter filter = 1;
		TokensFilter tokens = 2;
	}
};

message MovieTag {
	string value = 1;
	string kind = 2;
};

message MovieReference {
	string id = 1;
	optional uint32 pos = 2;
	optional string title = 3;
	optional string cover = 4;
	optional bool has_video = 5;
	repeated MovieTag tags = 6;
	repeated string age_rating = 7;
};

message MovieGroup {
	string id = 1;
	optional string title = 2;
	repeated MovieReference items = 3;
	optional uint32 pos = 4;
}

message MovieInfo {
	string id = 1;
	bool has_video = 2;
	TitleInfo title = 3;
	CrewInfo crew = 4;
	repeated PeopleMap people = 5;
	repeated Link links = 6;
	repeated string genres = 7;
	repeated string countries = 8;
	repeated string age_rating = 9;
	repeated MovieTag tags = 10;
	repeated MovieReference episodes = 11;
	optional string summary = 12;
	ImageInfo image = 13;
	optional uint32 year = 14;
	optional uint32 runtime = 15;
	optional uint32 rating = 16;
};

message TitleInfo {
	optional string local = 1;
	optional string orig = 2;
};

message CrewInfo {
	repeated PersonInfo directors = 1;
	repeated PersonInfo writers = 2;
	repeated PersonInfo cast = 3;
};

message PersonInfo {
	string key = 1;
	optional string contribution = 2;
};

message PeopleMap {
	string key = 1;
	string name = 2;
};

message Link {
	string href = 1;
	optional string icon = 2;
	optional string label = 3;
};

message ImageInfo {
	optional string highlight = 1;
	PosterInfo poster = 2;
	repeated string gallery = 3;
};

message PosterInfo {
	optional string small = 1;
	optional string large = 2;
	optional string normal = 3;
};
